# Aurora-x

./: .aurora_approvals.json  .aurora_diagnostics.json  .aurora_grades.json  .aurora_healing_log.json  .aurora_health_dashboard.json  .aurora_notifications.json  .aurora_project_config.json  .aurora_scores.json  .coverage  .dockerignore  .env.example  .env.local  .env.production  .env.template  .eslintignore  .eslintrc.cjs  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .replit  .replit.workflows  .self_learning_manual_stop  .self_learning_state.json  .services.json  .stylelintignore  .stylelintrc.json  550_MODULES_VERIFICATION.md  ACCURATE_STATUS_REPORT.md  ADVANCED_REFINEMENTS_IMPLEMENTATION_STATUS.md  ADVANCED_TIER_SYSTEM_FEATURES.md  AI_NATIVE_OS_GUIDE.md  ALL_BRANCHES_MERGE_ANALYSIS.md  ALL_ISSUES_FIXED_COMPLETE.md  ALL_ISSUES_FIXED_SUMMARY.md  ALL_TASKS_COMPLETE_SUMMARY.md  AUDIT_FIXES_COMPLETE.md  AURORA_30_MINUTE_CHALLENGE_COMPLETE.md  AURORA_35_FILES_GAME_PLAN.md  (+916 more)
.aurora/: aurora_core.py  bootstrap_state.json  config.yml  launcher_pids.json  prod_config.json  seeds.json
.aurora_comparison_archive/: AURORA_BRANCH_COMPARISON.html  AURORA_CORE_SKELETON.py  AURORA_IMPLEMENTATION_ROADMAP.md  AURORA_TODO_CHECKLIST.md  branch_analysis.json  branch_features.json
.aurora_knowledge/: AURORA_AUTONOMY_ISSUE_RESOLVED.md  AURORA_READY_TO_CODE.md  AURORA_SELF_DIAGNOSTIC_SESSION_LOG.md  AUTONOMOUS_FIX_TASK.json  CLEANUP_TECHNICAL_DEBT.completed  COMPLETE_PRIORITIES_7_AND_8.completed  COMPLETE_PRIORITY_10.completed  CREATE_DOCKERFILE.completed  FINALIZE_CICD_AUTOMATION.flag  FINAL_STATUS_REPORT.md  FIX_PORT_CONNECTION_ISSUES.completed  FIX_PORT_CONNECTION_ISSUES.flag  IMPLEMENT_AUTHENTICATION_AUTHORIZATION.completed  IMPLEMENT_BACKUP_DISASTER_RECOVERY.completed  IMPLEMENT_COMPREHENSIVE_TEST_SUITE.completed  IMPLEMENT_COMPREHENSIVE_TEST_SUITE.flag  IMPLEMENT_ENDPOINT_FIXES.completed  LUMINAR_V2_PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_LOG.md  PHASE2_TASK2_TEST_DRIVEN_FIXES.md  RECORDING_LOG.jsonl  TEST_BACKUP_RESTORE_SYSTEM.completed  aurora_completed_tasks.json  aurora_debug_task.jsonl  aurora_http400_fix.jsonl  aurora_self_fix.jsonl  aurora_task_history.json  aurora_tasks.json  aurora_ui_bug_fixes.json  auto_fix_report.txt  auto_fixes.jsonl  autonomous_agent.jsonl  autonomous_commands.json  autonomous_execution_log.md  autonomous_fixes.jsonl  autonomous_v2_execution.jsonl  autonomy_gates_removed.jsonl  blank_page_autofix_report.txt  blank_page_diagnosis.txt  coding_grandmaster_elevation.jsonl  (+28 more)
.aurora_tasks/: fix_python_extension.task  fix_workflows.task
.devcontainer/: devcontainer.json
.fw_registry/: sample-linux-sbc-linux-sbc-1764512392.json  sample-linux-sbc-linux-sbc-1764512415.json  sample-virtual-virtual-1764512415.json
.github/: AURORA_BUILDING_DASHBOARDS_STEP_BY_STEP.md  AURORA_CHECK_IN.md  AURORA_COMMAND_CENTER_MISSION.md  AURORA_COMPLETE_KNOWLEDGE_MAP.md  AURORA_COMPLETE_KNOWLEDGE_MAP_v2.md  AURORA_CONTEXT.md  AURORA_DASHBOARD_CREATION_GUIDE.md  AURORA_DASHBOARD_GRADING_REPORT.md  AURORA_DIRECT_ORDER.md  AURORA_KNOW_THYSELF_COMPLETE_GUIDE.md  AURORA_LUMINAR_NEXUS_CONTROL.md  AURORA_MEMORY_INTEGRATION_COMPLETE.md  AURORA_MONITOR_RULES.md  AURORA_ORCHESTRATION_COMPLETE.md  AURORA_QUICK_START.md  AURORA_SERVER_OPERATIONS_TRAINING.md  AURORA_SESSION_LEARNING_SUMMARY.md  AURORA_STATUS_AND_MISSION.md  AURORA_TEACHING_LESSON.md  AURORA_TIME_TO_ACT.md  CODEOWNERS  COMPLETE_SESSION_OVERVIEW.md  DASHBOARD_SESSION_COMPLETE_SUMMARY.md  GRADING_DASHBOARD_EVALUATION.md  LUMINAR_NEXUS_INTEGRATION_SUMMARY.md  PORT_5000_DIAGNOSIS.md  PULL_REQUEST_TEMPLATE.md  QUICK_GRADING_CHECKLIST.md  SESSION_DASHBOARD_AND_LEARNING_SUMMARY.md  THREE_LEVEL_GUARDIANS.md  TRON_GRID_ASSIGNMENT.md  WORKFLOWS_STATUS.md  copilot-instructions.md  dependabot.yml
.progress_history/: progress_20251006_080456.json  progress_20251009_194519.json  progress_20251009_201404.json  progress_T02f_100_20251009_194458.json  progress_T03_100_20251009_201403.json
.ssl/: cert.pem  key.pem
.venv.broken-20251217_054323/: pyvenv.cfg
Chango system/: chat_interface_chango_20251101_204808.tsx
agents/: README_AGENTS.md  __init__.py  agent_core.py  agent_manager.py
alembic/: env.py
analysis/: attached_files_summary.md
android/: termux-install.sh
app/: layout.tsx  page.tsx
attached_assets/: AURORA_PRODUCTION_ROADMAP_1760069180622.md  HOW_TO_T10_1760286203500.txt  HOW_TO_T12_1760299894800.txt  HOW_TO_WIRE_PROGRESS_V3_1760246145137.txt  MASTER_TASK_LIST_1760242743722.md  Makefile.T08_1760062466753.add  Makefile.lang_1760155081216.add  Makefile.port_1760164876901.add  Makefile.progress.v3_1760246145137.add  Makefile.progress_1760242743721.add  Makefile.router_1760152837066.add  Makefile.t10_1760286203500.add  Makefile.t12_1760299894800.add  Makefile.v3_1760050963508.add  Makefile_1760050035976  PROJECT_SUMMARY_1760060626753.md  Pasted--1-Overview-of-What-This-Does-The-integration-will-Copy_1765313974667.txt  Pasted--AURORA-ARCHITECTURAL-SELF-ANALYSIS-CURRENT-SYSTEM-TOPO_1764878011309.txt  Pasted--AURORA-X-Start-1764407370082_1764407370084.txt  Pasted--AURORAOS-UNIVERSAL-EDITION-PACK-1-FULL-CORE-SYSTEM-Runtime-Process-Manager-Repair-Engine--1764477884544_1764477884544.txt  Pasted--Aurora-X-Technical-Blueprint-for-a-Self-Coding-Self-Repairing-and-Autonomous-AI-System--1764390269322_1764390269323.txt  (+272 more)
aurora/: AURORA_SPECIFICATIONS.md  README.md
(+11716 files in other folders)
