[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-x"
version = "1.1.0"
description = "Aurora-X Ultra - Offline Autonomous Code Synthesis Engine + Live Task Tracker"
authors = [
    {name = "Aurora Team"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tracker", "hud"]
dependencies = [
    "fastapi>=0.118.2",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "uvicorn[standard]>=0.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.950",
]

[project.scripts]
aurorax = "aurora_x.main:main"
aurorax-serve = "aurora_x.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aurora_x*"]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
