[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-x"
version = "1.1.0"
description = "Aurora-X Ultra - Offline Autonomous Code Synthesis Engine + Live Task Tracker"
authors = [
    {name = "Aurora Team"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tracker", "hud"]
dependencies = [
    "fastapi>=0.118.2",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.950",
]

[project.scripts]
aurorax = "aurora_x.main:main"
aurorax-serve = "aurora_x.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aurora_x*"]

[tool.black]
line-length = 120
exclude = '''
/(
  \.eggs
 |build
 |dist
 |backups
)/
'''

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
