[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-x"
version = "1.1.0"
description = "Aurora-X Ultra - Offline Autonomous Code Synthesis Engine + Live Task Tracker"
authors = [
    {name = "Aurora Team"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["tracker", "hud"]
dependencies = [
    "fastapi>=0.118.2",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0.0",
    "black>=22.0",
    "mypy>=0.950",
]

[project.scripts]
aurorax = "aurora_x.main:main"
aurorax-serve = "aurora_x.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aurora_x*"]

[tool.black]
line-length = 120
exclude = '''
/(
  \.eggs
 |build
 |dist
 |backups
)/
'''

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.bandit]
exclude_dirs = ["tests", "backups", "runs", ".aurora"]
skips = ["B101"]

[tool.ruff]
# Allow lines up to 120 characters
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
select = ["E", "F", "W"]
ignore = [
    "E501",   # Line too long (handled by line-length)
    "BLE001", # Catching too general exception (intentional for resilience)
    "PLW0603", # Global statement (Flask pattern)
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "C901",   # Too complex
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "node_modules",
    "dist",
    "build",
]

[tool.ruff.lint.per-file-ignores]
# Allow broad exception catches in service management files
"tools/luminar_nexus_v2.py" = ["BLE001"]
"aurora_chat_server.py" = ["PLW0603"]
"aurora_core.py" = ["BLE001"]
